Remove state from AdjCache